miniconf/tests/ui/empty-array.rs
use miniconf::TreeSchema;

fn main() {
    let _ = <[Leaf<usize>; 0]>::SHAPE;
}
